infrastructure/k8s/redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: devops
spec:
  redirectScheme:
    scheme: https
    permanent: true
