infrastructure/k8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-grafana
  namespace: devops
  labels:
    app: devops-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-grafana
  template:
    metadata:
      labels:
        app: devops-grafana
    spec:
      securityContext:
        fsGroup: 472
      containers:
      - name: grafana
        image: grafana/grafana:11.0.0
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "20m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        volumeMounts:
        - name: grafana-storage
          mountPath: /var/lib/grafana
        - name: prov-datasources
          mountPath: /etc/grafana/provisioning/datasources
        - name: prov-dashboards
          mountPath: /etc/grafana/provisioning/dashboards
        - name: dashboards
          mountPath: /etc/grafana/dashboards
      volumes:
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-data-pvc
      - name: prov-datasources
        configMap:
          name: grafana-provisioning-datasources
      - name: prov-dashboards
        configMap:
          name: grafana-provisioning-dashboards
      - name: dashboards
        configMap:
          name: grafana-dashboards
---
apiVersion: v1
kind: Service
metadata:
  name: devops-grafana
  namespace: devops
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30010
    protocol: TCP
  selector:
    app: devops-grafana
