infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: devops-redirect-to-https@kubernetescrd
spec:
  tls:
  - hosts:
    - devops.mattdev0.tech
    secretName: devops-tls-secret
  rules:
  - host: devops.mattdev0.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-frontend
            port:
              number: 80
